{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 134,
  "lineage": "d52c9950-e796-bda1-2257-0619ea76ead2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "group9_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:471112673321:instance/i-0361273e69f5e4711",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0361273e69f5e4711",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012f0d5a041267029",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-98-84-13-221.compute-1.amazonaws.com",
            "public_ip": "98.84.13.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0835883ecc61e7ef1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02a18811fe3512fbd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0475cacebd14d4ec7",
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a18811fe3512fbd"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_security_group.group9_nginx_sg",
            "aws_subnet.group9_public_subnet",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group9_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:internet-gateway/igw-05e2c04ba6d830a9a",
            "id": "igw-05e2c04ba6d830a9a",
            "owner_id": "471112673321",
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "dependencies": [
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group9_local_rt_tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:route-table/rtb-09157f1c3ba32017e",
            "id": "rtb-09157f1c3ba32017e",
            "owner_id": "471112673321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e2c04ba6d830a9a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group9_public_rt_tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:route-table/rtb-090e62440e893226a",
            "id": "rtb-090e62440e893226a",
            "owner_id": "471112673321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e2c04ba6d830a9a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group9_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a68ec9a6a62d326",
            "route_table_id": "rtb-09157f1c3ba32017e",
            "subnet_id": "subnet-0fb087216b4bafd03"
          },
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_route_table.group9_local_rt_tb",
            "aws_subnet.group9_private_subnet",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group9_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04af42771ea08eed6",
            "route_table_id": "rtb-090e62440e893226a",
            "subnet_id": "subnet-0475cacebd14d4ec7"
          },
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_route_table.group9_public_rt_tb",
            "aws_subnet.group9_public_subnet",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group9_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:security-group/sg-02a18811fe3512fbd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a18811fe3512fbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241014201430498700000001",
            "name_prefix": "terraform-",
            "owner_id": "471112673321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group9_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:subnet/subnet-0fb087216b4bafd03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb087216b4bafd03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112673321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "dependencies": [
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group9_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:subnet/subnet-0475cacebd14d4ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475cacebd14d4ec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112673321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            },
            "vpc_id": "vpc-01bf8e9d6d89c5a0a"
          },
          "dependencies": [
            "aws_internet_gateway.group9_igw",
            "aws_vpc.group9_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group9_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:vpc/vpc-01bf8e9d6d89c5a0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2718bdea976579b",
            "default_route_table_id": "rtb-0b18ba851d7624cd8",
            "default_security_group_id": "sg-0b8f0ebb9a3a810e0",
            "dhcp_options_id": "dopt-0ca335e3ce8e30a45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bf8e9d6d89c5a0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b18ba851d7624cd8",
            "owner_id": "471112673321",
            "tags": {
              "Name": "devops-group-9"
            },
            "tags_all": {
              "Name": "devops-group-9"
            }
          }
        }
      ]
    }
  ]
}